# piduino

./: .gitignore  CMakeLists.txt  README.FR_fr.md  README.md  TODO  TODO.md  WARRANTY  cmake_uninstall.cmake.in  libpiduino.project  piduino.workspace
.github/: stale.yml
.github/docker/: Dockerfile.arm64  Dockerfile.armhf
.github/workflows/: build_cmake_arm64.yml  build_cmake_armhf.yml  doxygen-gh-pages.yml
database/: README.md  build  pidb-dev-notes.md  piduino-data-core.sql  piduino-data.sql  piduino-database.workspace  piduino-db-notes.md  piduino-db-use_cases.md  piduino-db.sqbpro  piduino-gpio-rp1.ods  piduino-pin-list.ods  piduino-rpi-list.ods  piduino-schema.sql  piduino.db  piduino.mwb  piduino.ods
database/pidbman/: actionbutton.h  boardmodel.cpp  boardmodel.h  boardvariant.cpp  boardvariant.h  connector.h  connectorfamily.cpp  database.h  enumstring.cpp  enumstring.h  folder.cpp  function.cpp  function.h  mainwindow.h  node.cpp  node.h  node_p.h  pidbman-qtcreator.pro  pidbman.project  pin.cpp  pin.h  property.cpp  property.h  property_p.h  soc.cpp  soc.h  socfamily.cpp  socfamily.h  treemodel.cpp  treemodel.h
database/use_cases/: delete-pin-of-soc.sql  insert-copy-pin-of-soc.sql  select-board-with-soc.sql  select-connector-pins.sql  select-gpio.sql  select-pin-of-soc.sql  select-pin_number.sql  select-schema-version.sql  select-soc-has-gpio-pin-number.sql  select-soc-has-pin.sql  update-board-gpioid.sql  update-chip-of-soc.sql
debian/: postinst.in  postrm.in  preinst.in  prerm.in
dev/: CMakeLists.txt  libpiduino-dev.project
dev/cmake/: FindCPPDB.cmake  FindCppDb.cmake  FindGZIP.cmake  Findmath.cmake  Findrt.cmake  GitVersion.cmake  PiBoardInfo.cmake  SubDirList.cmake
dev/codelite/executable-piduino/: executable-piduino.project  main.cpp
dev/rpi/: rpi-info
dev/template/: CMakeLists.txt  template.c  template.project
dev/template/arduino/: template.cpp  template.project  template.workspace
dev/template/cpp/: CMakeLists.txt  template.cpp
dev/templates/converter/: converter_template.cpp  converter_template.h  converter_template_p.h
dev/templates/gpiodevice/: gpio_template.cpp  gpio_template.h  gpio_template_p.h  template.h
dev/test/gpio/: CMakeLists.txt  bootstrap.sh  gpio.project
dev/test/ringbuffer/: main.cpp  ringbuffer.project  ringbuffer.workspace
doc/: CMakeLists.txt  Doxyfile.in  build_main_page.sh.in  libpiduino-doc.project  main_page_header.dox
etc/: piduino.conf.in
examples/: CMakeLists.txt  arduino-examples.workspace
examples/Blink/: .gitignore  Blink.project  Blink.workspace  CMakeLists.txt  main.cpp
examples/Blink-Daemon/: Blinkd.cpp  Blinkd.project  Blinkd.workspace  CMakeLists.txt  README.md  blinkd
examples/Button/: Button.project  Button.workspace  CMakeLists.txt  main.cpp
examples/Communication/: CMakeLists.txt
examples/Communication/ASCIITable/: ASCIITable.cpp  ASCIITable.project  CMakeLists.txt  main.cpp
examples/Converters/: CMakeLists.txt
examples/Fade/: CMakeLists.txt  Fade.cpp  Fade.project  main.cpp
examples/Interrupt/: CMakeLists.txt  Interrupt.project  main.cpp
examples/NoArduino/: CMakeLists.txt  piduino-examples.workspace
examples/Spi/: CMakeLists.txt
examples/Template/: CMakeLists.txt  README.md  Template.project  main.cpp
examples/Wire/: CMakeLists.txt
examples/blink/: blink.cpp  blink.project  blink.workspace
examples/button/: button.cpp  button.project  button.workspace
examples/fade/: fade.cpp  fade.workspace
examples/interrupt/: interrupt.cpp  interrupt.project  interrupt.workspace
include/: Arduino.h  WString.h
include/piduino/: arduino.h  board.h  chardevice.h  clock.h  configfile.h  converter.h  database.h  fifo.h  filedevice.h  fileno.h  filestream.h  flags.h  global.h  gpio.h  gpio2.h  gpioconnector.h  gpiodev2.h  gpiodevice.h  gpiopin.h  gpiopwm.h  i2cdev.h  (+25 more)
lib/: CMakeLists.txt  config.h.in  piduino-config-version.cmake.in  piduino-config.cmake.in  piduino.pc.in
pidbman/: actionbutton.cpp  boardfamily.cpp  boardfamily.h  boardmodel.h  boardvariant.h  connector.cpp  connectorfamily.h  database.cpp  database.h  enumstring.h  folder.cpp  folder.h  function.h  gpio.cpp  gpio.h  main.cpp  mainwindow.cpp  manufacturer.cpp  node_p.h  pidbman-qtcreator.pro  pidbman.project  pidbman.qrc  pin.h  property.cpp  soc.cpp  soc.h  socfamily.h  treemodel.cpp
sql/: piduino.db  piduino.sql
src/: arduino.cpp  board.cpp  chardevice.cpp  clock.cpp  converter.cpp  converter_p.h  database.cpp  filedevice.cpp  filedevice_p.h  fileno.cpp  filestream.cpp  filestream_p.h  iodevice.cpp  iodevice_p.h  iomap.c  iomap.cpp  manufacturer.cpp  piduino.cpp  pwm.cpp  pwm_p.h  scheduler.cpp  soc.cpp  string.cpp  syslog.cpp  system.cpp  terminal.cpp  terminal_p.h  terminalnotifier.cpp  terminalnotifier_p.h  wstring.cpp
tests/: CMakeLists.txt  README.md
tests/benchmarks/: CMakeLists.txt
tests/benchmarks/bench1-pin/: bench1-pin-results.ods  main.cpp
tests/test1-gpio2/: main.cpp
tests/test2-gpiodev2/: main.cpp
tests/test3-pin/: main.cpp  run_as_root
tests/test4-socpwm/: main.cpp
tests/test5-gpiopwm/: main.cpp
tests/test5-softpwm/: main.cpp
tests/test6-max1161x/: main.cpp
tests/unit-test-gpio2/: main.cpp
tests/unit-test-gpiodev2/: main.cpp
utils/: CMakeLists.txt  piduino-utils.project  piduino-utils.workspace
utils/gpio/: CMakeLists.txt  exception.cpp  exception.h  main.cpp
utils/gpio/dev/: CMakeLists.txt  gpio.project  gpio.workspace
utils/gpio/gpio/: CMakeLists.txt  gpio.project  main.cpp
utils/gpio/gpio/dev/: gpio.project
utils/pidbm/: CMakeLists.txt  board.cpp  board.h  connector.cpp  connector.h  gpio.cpp  gpio.h  main.cpp  pidbm.cpp  pidbm.h  pidbm.project  pidbm_p.h  pin.cpp  pin.h
utils/pidbm/include/: configfile.h  pimp.h  popl.h
utils/pido/: CMakeLists.txt  exception.cpp  exception.h  main.cpp  pido.1.in  pido.project  pido.workspace
utils/pimport/: CMakeLists.txt  pimport.cpp  pimport.project  pimport.workspace
utils/pinfo/: CMakeLists.txt  main.cpp  pinfo.1.in  pinfo.project
utils/pinfo/dev/: CMakeLists.txt  pinfo.project  pinfo.workspace
(+239 files in other folders)
